--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<link rel="shortcut icon" href="img/blueberry.ico">
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/blueberry.ico">
+  <meta name="Resume" content="Media and Cultural">
+  <meta name="author" content="862419031">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Melanie Gomez - Marketing</title>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Melanie Gomez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/melaniegomez.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,17 +58,17 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Melanie Gomez
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">I have always loved to help people and make them feel understood and love to be enthusiastic about my life. Because of that, i decided to starting working at a public amusement park at 16. This park was called "Castle Park." it was a pretty small but well known park to the city and was pretty busy on weekends. My position was a park associate. It taught be a lot from the work industry because it was my first job. I first learned customer service, cashiering, better communication skills, how to handle unsatisfied costumers and being reliable. I would work at the little souvenir stands and carnival games. I learned to up-sale and convince people to buy a certain product. I have practiced those skills over time and could proudly say I am great at them. Although it was just a part-time job, I learned so much and made so many connections that will last forever. They say first jobs play an important role in your life, and for me that is completely true.  <br><br>
 
-        Enter bio here<br><br>
+        During this job, I was a junior and senior in high school and worked around my schedule perfectly. Later, I was offered a job at might high school as an Avid Tutor from my teacher after i graduated. Because he saw how enthusiastic I was for helping people, he thought i would be a great candidate.This was a great opportunity right after high school because it gave me even more experience with working with kids, other teachers and even helping those students who don't know much english. I am fluent in Spanish and lucky to say that i could really help those students that are struggling due of their language barrier. Coming from a family that their first language is Spanish, i do understand how difficult it could be to succeed when the language everything is, is difficult. Anything i could do in my power to help others succeed is what my goal is in this job and will continue to help in anyway possible.  <br><br>
 
-        Enter bio here
+        A few things I have volunteered in have been been my public church, babysitting, street cleaning, animal shelter and homeless shelter. For my church, we have been to food banks like feeding America. Caring for our community is very important because I want all of us to be able to have a great clean community and have a safe place to live. A few church members, community helpers, and students have all came out to clean any trash on the streets, roads, parking lot, parks, etc. That has been one of my favorite thing to do next to animal shelter. In the animal shelter, we would feed the dogs and cats, clean them and play with them which always brought a smile to our faces and a happy tail to our pets. During holiday times, we would make nice dinners for those who don't have food or homes. It is always a great feeling helping our communities and those who are in need. 
         </p>
-        <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+        <div class="mgome204">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a target="_blank" id="socialicon-2" href="https://github.com">
@@ -77,7 +77,7 @@
           <a target="_blank" id="socialicon-3" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:mgome204@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Park Associate</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.castlepark.com">Castle Park</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Help costumers<br> 
+              • Cashier<br>
+              • Restocked Items in store<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2022 - April 2023</span>
           </div>
+          
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Avid Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://riversideunified.org"> Riverside Unified School District</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Teach students and help with homework<br>
+              • help grade students work<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2023 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Babysitting</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.care.com">Care</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped watch 2 small children<br>
+            • Cooked for 2 children<br>
+            • Helped bathe small children<br>
+            • Helped children with school work<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2019 - Present</span>
           </div>
         </div>
 
@@ -152,37 +153,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Business Administration</div>
+            <div>Focus in Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2023 - June 2027</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +169,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/avid tutor.png" width="500px">
+            <img src="img/babysitting.jpeg" width="500px"><br>
+            <img src="img/food handler.jpeg" width="500px">
+            <img src="img/castlepark.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Melanie Gomez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
